# bison

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  tutorial1.html  tutorial2.html  tutorial2.ipynb
.github/workflows/: ci.yml  doc.yml
bison/: __init__.py  decoder.py  encoder.py  io.py  io_multi.py  io_single.py  version.py
doc/: conf.py  index.rst  tutorial1.ipynb  tutorial2.ipynb
tests/: check1.py  check2.py  check3.py  check4.py  check5.py
