[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bison"
authors = [
    {name = "Mattia Bruno", email = "mattia.bruno@cern.ch"},
]
description = "A binary file format based on JSON"
license = {text = "GPL-2.0-only"}
readme = "README.md"
requires-python = ">=3.7"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GPLv2",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy"
]
dynamic = ["version"]